Fix T43332: Adding polygon int layer failed